--- a/openvidu-testapp/src/app/components/openvidu-instance/openvidu-instance.component.html
+++ b/openvidu-testapp/src/app/components/openvidu-instance/openvidu-instance.component.html
@@ -1,37 +1,37 @@
 <div class="div-wrapper">
 
   <div>
-    <md-card class="join-card">
+    <mat-card class="join-card">
 
-      <md-card-content>
+      <mat-card-content>
         <form class="session-form">
 
           <div class="secure-div">
-            <md-checkbox class="secure-session-checkbox" [disabled]="session" [(ngModel)]="secureSession" name="secureSession">SECURE</md-checkbox>
-            <md-form-field style="margin-right: 10px">
-              <input class="sessionIdInput" mdInput placeholder="SESSIONID" name="sessionIdInput" [(ngModel)]="sessionIdInput" [disabled]="!secureSession">
-            </md-form-field>
-            <md-form-field>
-              <input class="tokenInput" mdInput placeholder="TOKEN" name="tokenInput" [(ngModel)]="tokenInput" [disabled]="!secureSession">
-            </md-form-field>
+            <mat-checkbox class="secure-session-checkbox" [disabled]="session" [(ngModel)]="secureSession" name="secureSession">SECURE</mat-checkbox>
+            <mat-form-field style="margin-right: 10px">
+              <input class="sessionIdInput" matInput placeholder="SESSIONID" name="sessionIdInput" [(ngModel)]="sessionIdInput" [disabled]="!secureSession">
+            </mat-form-field>
+            <mat-form-field>
+              <input class="tokenInput" matInput placeholder="TOKEN" name="tokenInput" [(ngModel)]="tokenInput" [disabled]="!secureSession">
+            </mat-form-field>
           </div>
 
           <div>
-            <md-form-field style="margin-right: 10px">
-              <input mdInput placeholder="Session name" name="sessionName" [(ngModel)]="sessionName" [disabled]="session">
-            </md-form-field>
+            <mat-form-field style="margin-right: 10px">
+              <input matInput placeholder="Session name" name="sessionName" [(ngModel)]="sessionName" [disabled]="session">
+            </mat-form-field>
 
-            <md-form-field>
-              <input mdInput placeholder="Client data" name="clientData" [(ngModel)]="clientData" [disabled]="session">
-            </md-form-field>
+            <mat-form-field>
+              <input matInput placeholder="Client data" name="clientData" [(ngModel)]="clientData" [disabled]="session">
+            </mat-form-field>
           </div>
 
           <div>
-            <button class="join-btn" md-button (click)="joinSession()" [disabled]="session">JOIN</button>
-            <md-checkbox class="subscribe-checkbox" name="subscribeTo" (change)="toggleSubscribeTo()" [checked]="subscribeTo && checkSubscribeTo"
-              [disabled]="session">Subscribe</md-checkbox>
-            <md-checkbox class="publish-checkbox" name="publishTo" (change)="togglePublishTo()" [checked]="publishTo && checkPublishTo"
-              [disabled]="session || disablePublishTo">Publish</md-checkbox>
+            <button class="join-btn" mat-button (click)="joinSession()" [disabled]="session">JOIN</button>
+            <mat-checkbox class="subscribe-checkbox" name="subscribeTo" (change)="toggleSubscribeTo()" [checked]="subscribeTo && checkSubscribeTo"
+              [disabled]="session">Subscribe</mat-checkbox>
+            <mat-checkbox class="publish-checkbox" name="publishTo" (change)="togglePublishTo()" [checked]="publishTo && checkPublishTo"
+              [disabled]="session || disablePublishTo">Publish</mat-checkbox>
           </div>
 
           <div class="inner-card" fxLayout="row" fxLayoutAlign="start start">
@@ -40,59 +40,59 @@
               <div>
                 <h4>Send</h4>
                 <div>
-                  <md-checkbox class="send-audio-checkbox" name="sendAudio" (change)="toggleSendAudio()" [checked]="sendAudio && checkSendAudio"
-                    [disabled]="session || disableSendAudio">Audio</md-checkbox>
-                  <md-checkbox class="send-video-checkbox" name="sendVideo" (change)="toggleSendVideo()" [checked]="sendVideo && checkSendVideo"
-                    [disabled]="session || disableSendVideo">Video</md-checkbox>
+                  <mat-checkbox class="send-audio-checkbox" name="sendAudio" (change)="toggleSendAudio()" [checked]="sendAudio && checkSendAudio"
+                    [disabled]="session || disableSendAudio">Audio</mat-checkbox>
+                  <mat-checkbox class="send-video-checkbox" name="sendVideo" (change)="toggleSendVideo()" [checked]="sendVideo && checkSendVideo"
+                    [disabled]="session || disableSendVideo">Video</mat-checkbox>
                 </div>
               </div>
               <div style="padding-top: 5px;">
                 <h4>Enter active</h4>
                 <div>
-                  <md-checkbox class="active-audio-checkbox" name="activeAudio" (change)="toggleActiveAudio()" [checked]="activeAudio && checkActiveAudio"
-                    [disabled]="session || disableActiveAudio">Audio</md-checkbox>
-                  <md-checkbox class="active-video-checkbox" name="activeVideo" (change)="toggleActiveVideo()" [checked]="activeVideo && checkActiveVideo"
-                    [disabled]="session || disableActiveVideo">Video</md-checkbox>
+                  <mat-checkbox class="active-audio-checkbox" name="activeAudio" (change)="toggleActiveAudio()" [checked]="activeAudio && checkActiveAudio"
+                    [disabled]="session || disableActiveAudio">Audio</mat-checkbox>
+                  <mat-checkbox class="active-video-checkbox" name="activeVideo" (change)="toggleActiveVideo()" [checked]="activeVideo && checkActiveVideo"
+                    [disabled]="session || disableActiveVideo">Video</mat-checkbox>
                 </div>
               </div>
             </div>
 
             <div fxFlex="40">
-              <md-radio-group [(ngModel)]="optionsVideo" [disabled]="session || disableRadioButtons" [ngModelOptions]="{standalone: true}">
+              <mat-radio-group [(ngModel)]="optionsVideo" [disabled]="session || disableRadioButtons" [ngModelOptions]="{standalone: true}">
                 <div>
-                  <md-radio-button class="video-radio" value="video" [checked]="checkRadioVideo && optionsVideo==='video'">Video</md-radio-button>
+                  <mat-radio-button class="video-radio" value="video" [checked]="checkRadioVideo && optionsVideo==='video'">Video</mat-radio-button>
                 </div>
                 <div>
-                  <md-radio-button class="screen-radio" value="screen" [checked]="checkRadioScreen && optionsVideo==='screen'">Screen</md-radio-button>
+                  <mat-radio-button class="screen-radio" value="screen" [checked]="checkRadioScreen && optionsVideo==='screen'">Screen</mat-radio-button>
                 </div>
-              </md-radio-group>
-              <md-checkbox class="subscribe-remote-check" name="subscribeToRemote" (change)="subscribeToRemote = !subscribeToRemote" [disabled]="(!sendAudio && !sendVideo) || !publishTo || session"
+              </mat-radio-group>
+              <mat-checkbox class="subscribe-remote-check" name="subscribeToRemote" (change)="subscribeToRemote = !subscribeToRemote" [disabled]="(!sendAudio && !sendVideo) || !publishTo || session"
                 [checked]="(sendAudio || sendVideo) && publishTo && subscribeToRemote">Subscribe
-                <br>to remote</md-checkbox>
+                <br>to remote</mat-checkbox>
             </div>
 
           </div>
 
         </form>
-      </md-card-content>
+      </mat-card-content>
 
-    </md-card>
+    </mat-card>
   </div>
 
   <div *ngIf="session">
-    <md-card class="session-card">
+    <mat-card class="session-card">
       <div class="session-card-header">
         <div class="session-card-inner">
           <div class="session-title">{{sessionName}}</div>
           <div class="session-actions">
             <button class="video-btn" *ngIf="publishTo && sendVideo" (click)="toggleVideo()">
-              <md-icon aria-label="Mute video button">{{videoIcon}}</md-icon>
+              <mat-icon aria-label="Mute video button">{{videoIcon}}</mat-icon>
             </button>
             <button class="audio-btn" *ngIf="publishTo && sendAudio" (click)="toggleAudio()">
-              <md-icon aria-label="Mute audio button">{{audioIcon}}</md-icon>
+              <mat-icon aria-label="Mute audio button">{{audioIcon}}</mat-icon>
             </button>
             <button class="leave-btn" (click)="leaveSession()">
-              <md-icon aria-label="Leave button">clear</md-icon>
+              <mat-icon aria-label="Leave button">clear</mat-icon>
             </button>
           </div>
         </div>
@@ -101,22 +101,22 @@
         <div fxFlex="135px" class="video-container">
 
           <div class="event-list-div scroll-custom">
-            <md-accordion [attr.id]="'events-' + session.connection.connectionId" class="event-list">
-              <md-expansion-panel *ngFor="let event of events" class="event-item">
-                <md-expansion-panel-header [attr.id]="event.name + '-' + session.connection.connectionId" [collapsedHeight]="'20px'" [expandedHeight]="'20px'"
+            <mat-accordion [attr.id]="'events-' + session.connection.connectionId" class="event-list">
+              <mat-expansion-panel *ngFor="let event of events" class="event-item">
+                <mat-expansion-panel-header [attr.id]="event.name + '-' + session.connection.connectionId" [collapsedHeight]="'20px'" [expandedHeight]="'20px'"
                   class="event-name">
                   {{event.name}}
-                </md-expansion-panel-header>
+                </mat-expansion-panel-header>
                 <div class="event-content">{{event.content}}</div>
-              </md-expansion-panel>
-            </md-accordion>
+              </mat-expansion-panel>
+            </mat-accordion>
           </div>
         </div>
         <div [attr.id]="'remote-vid-' + session.connection.connectionId" fxFlex="270px" class="video-container">
           <div [attr.id]="'local-vid-' + session.connection.connectionId"></div>
         </div>
       </div>
-    </md-card>
+    </mat-card>
   </div>
 
 </div>
