--- a/openvidu-testapp/src/app/components/test-apirest/test-apirest.component.html
+++ b/openvidu-testapp/src/app/components/test-apirest/test-apirest.component.html
@@ -1,13 +1,13 @@
 <div>
   <div fxLayout="row" fxLayoutGap="20px" fxLayoutAlign="start space-around">
     <div fxLayout="column" fxFlex="45" fxFlexAlign="center" fxFill>
-      <button md-raised-button color="primary" (click)="getSessionId()">GET SESSIONID</button>
+      <button mat-raised-button color="primary" (click)="getSessionId()">GET SESSIONID</button>
     </div>
     <div fxLayout="column" fxFlex="45" fxFlexAlign="center" fxFill>
-      <button md-raised-button color="primary" (click)="getToken()" [disabled]="getTokenDisabled()">GET TOKEN</button>
+      <button mat-raised-button color="primary" (click)="getToken()" [disabled]="getTokenDisabled()">GET TOKEN</button>
     </div>
     <div fxLayout="column" fxFlex="10" fxFlexAlign="center" fxFill>
-      <button md-raised-button color="warn" (click)="cleanAllSessions()" [disabled]="data.length == 0">CLEAN</button>
+      <button mat-raised-button color="warn" (click)="cleanAllSessions()" [disabled]="data.length == 0">CLEAN</button>
     </div>
   </div>
 
@@ -21,15 +21,15 @@
         </tr>
         <tr *ngFor="let sid of this.data; let ind = index">
           <td class="first-col">
-            <md-card [style.background]="getBackgroundColor(ind)">{{sid[0]}}</md-card>
+            <mat-card [style.background]="getBackgroundColor(ind)">{{sid[0]}}</mat-card>
           </td>
           <td>
-            <md-card *ngIf="sid[1].length > 0" [style.background]="getBackgroundColor(ind)">
+            <mat-card *ngIf="sid[1].length > 0" [style.background]="getBackgroundColor(ind)">
               <p *ngFor="let token of sid[1]">{{token}}</p>
-            </md-card>
+            </mat-card>
           </td>
           <td style="text-align: center">
-            <md-radio-button [checked]="selectedRadioIndex === ind" (click)="selectedRadioIndex = ind" name="sidOption"></md-radio-button>
+            <mat-radio-button [checked]="selectedRadioIndex === ind" (click)="selectedRadioIndex = ind" name="sidOption"></mat-radio-button>
           </td>
         </tr>
       </table>
@@ -42,16 +42,16 @@
         </tr>
         <tr id="tr-token-options" *ngIf="data.length > 0">
           <td>
-            <md-select placeholder="OpenVidu Role" [(ngModel)]="selectedRole">
-              <md-option *ngFor="let role of openViduRoles" [value]="role">
+            <mat-select placeholder="OpenVidu Role" [(ngModel)]="selectedRole">
+              <mat-option *ngFor="let role of openViduRoles" [value]="role">
                 {{ role }}
-              </md-option>
-            </md-select>
+              </mat-option>
+            </mat-select>
           </td>
           <td>
-            <md-form-field id="server-data-field">
-              <input mdInput placeholder="Server Data" [(ngModel)]="serverData">
-            </md-form-field>
+            <mat-form-field id="server-data-field">
+              <input matInput placeholder="Server Data" [(ngModel)]="serverData">
+            </mat-form-field>
           </td>
         </tr>
       </table>
