--- a/openvidu-testapp/src/styles.css
+++ b/openvidu-testapp/src/styles.css
@@ -62,6 +62,7 @@ button {
 .mat-expansion-panel-body {
   font-size: 9.5px !important;
   padding: 0 9px 0px !important;
+  margin: 0 2px 0 2px !important;
   background-color: white;
   border: 3px solid #e0e0e0;
   line-height: 13px;
