openvidu-server COMPLETE REFACTORING

--- a/openvidu-server/src/main/resources/templates/accept-cert.html
+++ b/openvidu-server/src/main/resources/templates/accept-cert.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8"></meta>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
 </body>
-<script>history.back()</script>
+<script type="text/javascript">window.history.back()</script>
 </html>
