--- a/openvidu-testapp/src/app/components/openvidu-instance/openvidu-instance.component.html
+++ b/openvidu-testapp/src/app/components/openvidu-instance/openvidu-instance.component.html
@@ -85,8 +85,11 @@
         <div class="session-card-inner">
           <div class="session-title">{{sessionName}}</div>
           <div class="session-actions">
+            <button class="publish-btn" *ngIf="publishTo" (click)="publishUnpublish()">
+              <mat-icon aria-label="Publish Unpublish button">{{publishIcon}}</mat-icon>
+            </button>
             <button class="message-btn" (click)="sendMessage()">
-              <mat-icon aria-label="Send message button">chat</mat-icon>
+              <mat-icon aria-label="Send message button" style="font-size: 20px">chat</mat-icon>
             </button>
             <button class="video-btn" *ngIf="publishTo && sendVideo" (click)="toggleVideo()">
               <mat-icon aria-label="Mute video button">{{videoIcon}}</mat-icon>
