--- a/openvidu-testapp/src/styles.css
+++ b/openvidu-testapp/src/styles.css
@@ -66,7 +66,7 @@ button {
 .video-container div.data-node .sub-btn {
   outline: 0;
   border: none;
-  background: white;
+  background: rgba(255, 255, 255, 0.75);
   cursor: pointer;
   padding: 0;
   margin-top: 40px;
@@ -77,10 +77,26 @@ button {
   color: #4d4d4d;
 }
 
+.video-container div.data-node .rec-btn {
+  float: right;
+  border-top-right-radius: 0;
+  border-top-left-radius: 2px;
+  color: #ac0000;
+}
+
+.video-container div.data-node .rec-btn:hover {
+  color: #ac000082;
+}
+
+.video-container div.data-node .rec-btn.publisher-rec-btn {
+  margin-top: 70px;
+}
+
 .video-container div.data-node .material-icons {
   font-size: 17px;
   width: 17px;
   height: 17px;
+  line-height: 20px;
 }
 
 .mat-expansion-panel-body {
@@ -105,3 +121,62 @@ button {
 .mat-expansion-panel-spacing {
   margin: 3px 0 !important;
 }
+
+#local-recorder-preview video {
+  width: 500px;
+  height: inherit;
+}
+
+/*Rotating animation*/
+
+@-webkit-keyframes rotating
+/* Safari and Chrome */
+
+  {
+  from {
+    -ms-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+  to {
+    -ms-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+}
+
+@keyframes rotating {
+  from {
+    -ms-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+  to {
+    -ms-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+}
+
+.rotating {
+  -webkit-animation: rotating 1s linear infinite;
+  -moz-animation: rotating 1s linear infinite;
+  -ms-animation: rotating 1s linear infinite;
+  -o-animation: rotating 1s linear infinite;
+  animation: rotating 1s linear infinite;
+  cursor: default !important;
+}
+
+.rotating:hover {
+  color: inherit !important;
+}
+
+/*End rotating animation*/
