--- a/openvidu-testapp/src/styles.css
+++ b/openvidu-testapp/src/styles.css
@@ -122,7 +122,7 @@ button {
   margin: 3px 0 !important;
 }
 
-#local-recorder-preview video {
+#recorder-preview video {
   width: 500px;
   height: inherit;
 }
