--- a/openvidu-server/src/angular/frontend/src/app/components/layouts/layout-best-fit/layout-best-fit.component.css
+++ b/openvidu-server/src/angular/frontend/src/app/components/layouts/layout-best-fit/layout-best-fit.component.css
@@ -573,6 +573,8 @@ video {
 
 /* Contains the video element, used to fix video letter-boxing */
 .OT_widget-container {
+  width: 100%;
+  height: 100%;
   position: absolute;
   background-color: #000000;
   overflow: hidden;
