--- a/openvidu-testapp/src/app/components/test-apirest/test-apirest.component.html
+++ b/openvidu-testapp/src/app/components/test-apirest/test-apirest.component.html
@@ -16,7 +16,7 @@
     <table>
       <tr>
         <th>Recording Mode</th>
-        <th>Recording Layout</th>
+        <th>Default Recording Layout</th>
         <th>Media Mode</th>
       </tr>
       <tr id="tr-session-properties">
@@ -28,9 +28,9 @@
           </mat-select>
         </td>
         <td>
-          <mat-select placeholder="RecordingLayout" [(ngModel)]="selectedRecordingLayout">
-            <mat-option *ngFor="let recordingLayout of recordingLayouts" [value]="recordingLayout">
-              {{ recordingLayout }}
+          <mat-select placeholder="DeafaultRecordingLayout" [(ngModel)]="selectedDefaultRecordingLayout">
+            <mat-option *ngFor="let defaultRecordingLayout of defaultRecordingLayouts" [value]="defaultRecordingLayout">
+              {{ defaultRecordingLayout }}
             </mat-option>
           </mat-select>
         </td>
