openvidu-browser TypeDoc custom theme

--- a/openvidu-browser/config/typedoc/custom-theme/partials/header.hbs
+++ b/openvidu-browser/config/typedoc/custom-theme/partials/header.hbs
@@ -13,7 +13,9 @@
                         <li class="state failure">The search index is not available</li>
                     </ul>
 
-                    <a href="/docs/reference-docs/openvidu-browser/" class="title"><img class="logo-small" src="/img/logos/openvidu_vert_grey_bg_transp_cropped.png"></a>
+                    <a style="position: absolute" href="/docs/reference-docs/openvidu-browser/" class="title">
+                        <img class="logo-small" style="height: 26px; margin-top: 7px" src="/img/logos/openvidu_vert_grey_bg_transp_cropped.png">
+                    </a>
                 </div>
 
                 <div class="table-cell" id="tsd-widgets">
