--- a/openvidu-browser/config/typedoc/custom-theme/layouts/default.hbs
+++ b/openvidu-browser/config/typedoc/custom-theme/layouts/default.hbs
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="{{relativeURL "assets/css/main.css"}}">
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 </head>
 <body>
 
