--- a/openvidu-testapp/src/app/components/test-apirest/test-apirest.component.html
+++ b/openvidu-testapp/src/app/components/test-apirest/test-apirest.component.html
@@ -61,7 +61,7 @@
 
   <div id="table-row" fxLayout="row" fxLayoutGap="20px" fxLayoutAlign="start">
     <div fxLayout="column" fxFlex="65" fxFlexAlign="start" fxFill>
-      <table>
+      <table class="api-rest-table">
         <tr>
           <th *ngIf="this.data.length > 1">Selection</th>
           <th class="first-col">Session IDs</th>
